@@ -387,16 +387,28 @@
           <para>Failure of another leader</para>
         </listitem>
       </orderedlist>
+    </section>
 
-      <para><figure id="fg_zkPerfReliability">
+    <section>
+      <title>Reliability</title>
+
+      <para>To show the behavior of the system over time as
+        failures are injected we ran a ZooKeeper service made up of
+        7 machines. We ran the same saturation benchmark as before,
+        but this time we kept the write percentage at a constant
+        30%, which is a conservative ratio of our expected
+        workloads.
+      </para>
+      <para>
+        <figure id="fg_zkPerfReliability">
           <title>Reliability in the Presence of Errors</title>
-
           <mediaobject>
             <imageobject>
               <imagedata fileref="images/zkperfreliability.jpg" />
             </imageobject>
           </mediaobject>
-        </figure></para>
+        </figure>
+      </para>
 
       <para>The are a few important observations from this graph. First, if
       followers fail and recover quickly, then ZooKeeper is able to sustain a
@@ -411,25 +423,27 @@
     <section>
       <title>The ZooKeeper Project</title>
 
-      <para>ZooKeeper has been successfully used in industrial applications.
-      It is used at Yahoo! as the coordination and failure recovery service
-      for Yahoo! Message Broker, which is a highly scalable publish-subscribe
-      system managing thousands of topics for replication and data delivery.
-      It is used by the Fetching Service for Yahoo! crawler, where it also
-      manages failure recovery. And it is used by Hadoop On Demand (HOD),
-      which is an open source implementation of the map-reduce model of
-      computation. HOD uses Zookeeper as a communications and control channel
-      between slave and master process. (For more information, see the <ulink
-      url="http://hadoop.apache.org/core/">Hadoop</ulink> and <ulink
-      url="http://hadoop.apache.org/core/docs/current/hod.html">Hadoop on
-      Demand</ulink> open source projects on Apache.)</para>
+      <para>ZooKeeper has been
+        <ulink url="http://wiki.apache.org/hadoop/ZooKeeper/PoweredBy">
+          successfully used
+        </ulink>
+        in many industrial applications.  It is used at Yahoo! as the
+        coordination and failure recovery service for Yahoo! Message
+        Broker, which is a highly scalable publish-subscribe system
+        managing thousands of topics for replication and data
+        delivery.  It is used by the Fetching Service for Yahoo!
+        crawler, where it also manages failure recovery. A number of
+        Yahoo! advertising systems also use ZooKeeper to implement
+        reliable services.
+      </para>
 
-      <para>ZooKeeper itself is an open source project, under the Apache Open
-      Source Foundation. It is a subproject of Hadoop. All users and
-      developers are encourged to join the community and contribute their
-      expertise. See the <ulink
-      url="http://hadoop.apache.org/zookeeper/">Zookeeper Project on
-      Apache</ulink> for more information.</para>
+      <para>All users and developers are encouraged to join the
+        community and contribute their expertise. See the
+        <ulink url="http://hadoop.apache.org/zookeeper/">
+          Zookeeper Project on Apache
+        </ulink>
+        for more information.
+      </para>
     </section>
   </chapter>
 </book>
